Tidied up code with suggestions from ruff
Tests fail on Python 3.6 while we're using return type annotations (fail on 3.5 due to Hatchling)

Ruff is even faster than advertised, and mainly suggested line length reductions.

Mypy made some good suggestions, but I'm not sure Liskov etc. is relevant given the amount of diamond inheritance.  Violations are intentional.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ authors = [
 description = "Self-nesting list-keyed dicts, multiple-defaults dicts, and TOML-style Array of Tables lists/dicts. "
 license = {file="LICENSE"}
 readme = "README.md"
-requires-python = ">=3.9"
+requires-python = ">=3.7" # 3.7 for annotations
 classifiers = [
     "Programming Language :: Python :: 3",
     "License :: OSI Approved :: MIT License",
